[package]
name = "application"
version = "0.1.0"
authors = ["zda"]
edition = "2021"

[lib]
name = "application"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]         #  TODO  TODO TODO TODO Разобарться, где нужны default фичи
base64 = { version = "^0.13", default-features = true, features = [], optional = false }
bb8 = { version = "^0.7", default-features = true, features = [], optional = false }
bb8-postgres = { version = "^0.7", default-features = true, features = [], optional = false }
bb8-redis = { version = "^0.10", default-features = true, features = [], optional = false }
bytes = { version = "^1.1", default-features = true, features = [], optional = false }
chrono = { version = "^0.4", default-features = true, features = [], optional = false }
dotenv = { version = "^0.15", default-features = true, features = [], optional = false }
futures = { version = "^0.3", default-features = true, features = [], optional = false }
futures-util = { version = "^0.3", default-features = true, features = [], optional = false }
hex = { version = "^0.4", default-features = true, features = [], optional = false }
http = { version = "^0.2", default-features = true, features = [], optional = false }
hyper = { version = "^0.14", default-features = true, features = ["full"], optional = false }  # Убрать фичу Full и понять , какие нужны
lettre = { version = "^0.9", default-features = true, features = [], optional = false }
lettre_email = { version = "^0.9", default-features = true, features = [], optional = false }
log = { version = "^0.4", default-features = true, features = [], optional = false }
log4rs = { version = "^1.0", default-features = true, features = ["all_components"], optional = false }
redis = { version = "^0.21", default-features = true, features = ["tokio-comp", "tokio-native-tls-comp"], optional = false }
regex = { version = "^1.4", default-features = true, features = [], optional = false }
rmp-serde = { version = "^0.15", default-features = true, features = [], optional = false }
rust-argon2 = { version = "^0.8", default-features = true, features = [], optional = false }
rust-crypto = { version = "^0.2", default-features = true, features = [], optional = false }
serde = { version = "^1.0", default-features = true, features = ["derive"], optional = false }
tokio = { version = "^1.16", default-features = true, features = ["full"], optional = false }  # Убрать фичу Full и понять , какие нужны
tokio-postgres = { version = "^0.7", default-features = true, features = [], optional = false }
uuid = { version = "^0.8", default-features = true, features = ["v4"], optional = false }

serde_json = { version = "^1.0", default-features = true, features = [], optional = true }

[features]
default = []
facilitate_non_automatic_functional_testing = ["dep:serde_json"]