[package]
name = "application"
version = "0.1.0"
authors = ["zda"]
edition = "2021"

[lib]
name = "application"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
extern_crate = { path = "./infrastructure_layer/extern_crate", package = "extern_crate", version = "0.1.0", default-features = true, features = [], optional = false }
serde_json = { version = "^1.0", default-features = true, features = [], optional = true }

[features]
default = []
facilitate_non_automatic_functional_testing = ["dep:serde_json"]