[package]
name = "integration_module"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "integration_module"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[dependencies]
unified_report = { path = "./../forced_crate/unified_report", package = "unified_report", version = "0.1.0", default-features = true, features = [], optional = false }
action_processor_incoming_outcoming = { path = "./../forced_crate/action_processor_incoming_outcoming", package = "action_processor_incoming_outcoming", version = "0.1.0", default-features = true, features = [], optional = false }

[features]
default = []