[lib]
name = "client_server_data_serializer"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["staticlib"]
required-features = []

[package]
name = "client_server_data_serializer"
version = "1.0.0"
authors.workspace = true
edition = "2021"
rust-version.workspace = true
build = "./source/build.rs"

[dependencies]
bitcode = { workspace = true }
dedicated = { workspace = true }
libc = { package = "libc", version = "=0.2.158", default-features = true, features = [], optional = false }

[build-dependencies]
cargo-emit = { workspace = true }
cbindgen = { package = "cbindgen", version = "=0.28.0", default-features = true, features = [], optional = false }
uuid = { workspace = true }

[dev-dependencies]
stats_alloc = { package = "stats_alloc", version = "=0.1.10", default-features = true, features = [], optional = false }

[features]
default = []

[lints]
workspace = true