[package]
name = "auditor"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "auditor"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
error = { path = "./../error", package = "error", version = "0.1.0", default-features = true, features = [], optional = false }

[features]
default = []