[lib]
name = "bit_code_serializer"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[package]
name = "bit_code_serializer"
version = "1.0.0"
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }

[features]
default = []