[package]
name = "entity"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "entity"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
serde = { package = "serde", version = "^1.0", default-features = true, features = ["derive"], optional = false }

[features]
default = []
manual_testing = []