[package]
name = "error"
version = "1.0.0"
authors.workspace = true
edition = "2021"

[lib]
name = "error"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[features]
default = []