[package]
name = "formatter"
version = "1.0.0"
authors.workspace = true
edition = "2021"

[lib]
name = "formatter"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
auditor = { path = "./../auditor", package = "auditor", version = "1.0.0", default-features = true, features = [], optional = false }
error = { path = "./../error", package = "error", version = "1.0.0", default-features = true, features = [], optional = false }

[features]
default = []