[package]
name = "message_pack_serializer"
version = "1.0.0"
authors.workspace = true
edition = "2021"

[lib]
name = "message_pack_serializer"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
auditor = { path = "./../auditor", package = "auditor", version = "1.0.0", default-features = true, features = [], optional = false }
error = { path = "./../error", package = "error", version = "1.0.0", default-features = true, features = [], optional = false }
rmp_serde = { package = "rmp-serde", version = "0.15.5", default-features = true, features = [], optional = false }
serde = { package = "serde", version = "1.0.188", default-features = true, features = ["derive"], optional = false }
void = { path = "./../void", package = "void", version = "1.0.0", default-features = true, features = [], optional = false }

[features]
default = []