[lib]
name = "message_pack_serializer"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[package]
name = "message_pack_serializer"
version = "1.0.0"
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
aggregate_error = { path = "./../aggregate_error", package = "aggregate_error", version = "=1.0.0", default-features = true, features = [], optional = false }
rmp_serde = { package = "rmp-serde", version = "=0.15.5", default-features = true, features = [], optional = false }# Нет смысла менять на другу. версию, потому что это заменится на другой алгоритм сериализации.
serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }

[features]
default = []