[package]
name = "unified_report"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "unified_report"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
serde = { package = "serde", version = "1.0.188", default-features = true, features = ["derive"], optional = false }

[features]
default = []