[lib]
name = "user_access_token_encoded"
path = "./source/mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[package]
name = "user_access_token_encoded"
version = "1.0.0"
authors.workspace = true
rust-version.workspace = true
edition = "2021"

[lints]
workspace = true

[dependencies]
serde = { package = "serde", version = "=1.0.210", default-features = true, features = ["derive"], optional = false }
bitcode = { package = "bitcode", version = "=0.6.3", default-features = true, features = [], optional = false }

[features]
default = []