[package]
name = "void"
version = "0.1.0"
authors.workspace = true
edition = "2021"

[lib]
name = "void"
path = "./mod.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false
harness = true
edition = "2021"
crate-type = ["lib"]
required-features = []

[dependencies]
formatter = { path = "./../formatter", package = "formatter", version = "0.1.0", default-features = true, features = [], optional = false }
serde = { package = "serde", version = "1.0.188", default-features = true, features = ["derive"], optional = false }

[features]
default = []